fix: errors in docker

--- a/src/Hris.AuthService.Api/DockerFile
+++ b/src/Hris.AuthService.Api/DockerFile
@@ -4,7 +4,7 @@ WORKDIR /src
 
 COPY . .
 RUN dotnet restore src/Hris.AuthService.Api/Hris.AuthService.Api.csproj
-RUN dotnet publish src/Hris.AuthService.Api/Hris.AuthService.Api.csproj -c Release -o /app/publish
+RUN dotnet publish src/Hris.AuthService.Api/Hris.AuthService.Api.csproj -c Release -o /app/publish /p:UseAppHost=false
 
 # Run
 FROM mcr.microsoft.com/dotnet/aspnet:10.0
