--- a/src/Hris.AuthService.Api/Properties/launchSettings.json
+++ b/src/Hris.AuthService.Api/Properties/launchSettings.json
@@ -6,6 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5189",
+      "workingDirectory": "C:\\Users\\Finteq Solutions Inc\\Downloads\\AuthRepo\\AuthServices",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -15,6 +16,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7190;http://localhost:5189",
+      "workingDirectory": "C:\\Users\\Finteq Solutions Inc\\Downloads\\AuthRepo\\AuthServices",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
