--- a/src/Hris.AuthService.Api/Hris.AuthService.Api.csproj
+++ b/src/Hris.AuthService.Api/Hris.AuthService.Api.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.3" />
+    <PackageReference Include="StackExchange.Redis" Version="2.11.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.3" />
   </ItemGroup>
 
